JumpScript/tests/baselines/reference/conflictMarkerTrivia1.errors.txt
tests/cases/compiler/conflictMarkerTrivia1.jump(2,1): error TS1185: Merge conflict marker encountered.
tests/cases/compiler/conflictMarkerTrivia1.jump(4,1): error TS1185: Merge conflict marker encountered.
tests/cases/compiler/conflictMarkerTrivia1.jump(6,1): error TS1185: Merge conflict marker encountered.


==== tests/cases/compiler/conflictMarkerTrivia1.jump (3 errors) ====
    class C {
    <<<<<<< HEAD
    ~~~~~~~
!!! error TS1185: Merge conflict marker encountered.
        v = 1;
    =======
    ~~~~~~~
!!! error TS1185: Merge conflict marker encountered.
        v = 2;
    >>>>>>> Branch-a
    ~~~~~~~
!!! error TS1185: Merge conflict marker encountered.
    }